# qpm2-test-template

./: .templatr
.github/workflows/: build-ndk.yml
cmake/: gtest.cmake  toolchain.cmake
cmake/targets/: android-ndk.cmake
template/: .gitignore  CMakeLists.txt  mod.template.json  qpm2.json
template/cmake/: qpm.cmake  strip.cmake  vcpkg.cmake
template/cmake/targets/: quest.cmake
template/index/: _config.hpp.775D1E47D86CD65A.idx  main.cpp.2BFE29BD6B35EBD8.idx  main.hpp.C0D82526C097A316.idx
template/src/: main.cpp
